--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.0",
     "react-scroll": "^1.8.1"
   },
   "scripts": {
